--- a/index.html
+++ b/index.html
@@ -1,39 +1,51 @@
 <html>
     <head>
-        <title>Committees</title>
+        <title>Validebağ MUN'23</title>
     </head>
+    <meta charset="UTF-8">
     <body>
-        <section id="slider">
-            <figure>
-                <figcaption>
-                    <center><h1 style="background-color:dodgerblue; font-size:xx-large ;">Committees</h1>
-                    <img src="mun.jpg" style="width: 630px;height: 300px;" alt="">
-                    <p>GA1: DISEC</p>
-                    <p>GA2: ECOFIN</p>
-                    <p>GA3: SOCHUM</p>
-                    <p>JCC: Battle of Uhud</p></center>
-                </figcaption>
-            </figure>
-        </section>
-        <section id="slider">
-            <figure>
-                <figcaption>
-                <center><h3 style="background-color:dodgerblue;font-size:x-large;">Disarmament and International Security Committee</h3>
-                <img src="disec.jpg" style="width: 630px;height: 300px;" alt="">
-                <h5><i>Agenda Item: Open Agenda</i></h5></center>
-                <p>The First Committee deals with disarmament, global challenges and threats to peace that affect the international community and seeks out solutions to the challenges in the international security regime. It considers all disarmament and international security matters within the scope of the Charter or relating to the powers and functions of any other organ of the United Nations; the general principles of cooperation in the maintenance of international peace and security, as well as principles governing disarmament and the regulation of armaments; promotion of cooperative arrangements and measures aimed at strengthening stability through lower levels of armaments.</p>
-                </figcaption>
-            </figure>
-        </section>
-        <section id="slider">
-            <figure>
-                <figcaption>
-                    <center><h3 style="background-color:dodgerblue;font-size:x-large;">Joint Crisis Committee</h3>
-                    <img src="jcc.png" style="width: 630px;height: 300px;" alt="">
-                    <h5><i>Agenda Item: Battle of Uhud</i></h5></center>
-                    <p>The Battle of Uhud was fought on Saturday, 23 March 625 AD in the valley north of Mount Uhud. The Qurayshi Meccans, led by Abu Sufyan ibn Harb, commanded an army of 3,000 men toward Muhammad's stronghold in Medina. The battle was the only battle throughout the Muslim–Quraysh War in which the Muslims did not manage to defeat their enemy and it came just a year after the Battle of Badr.</p>
-                </figcaption>
-            </figure>
-        </section>
+        <div>
+            <header>
+                <div id="hgroup">
+                    <img src="http://validebagfenlisesi.meb.k12.tr/meb_iys_dosyalar/34/22/765375/resimler/2019_12/03121756_vflmun_logo_g.jpg" alt="Validebağ Model United Nations" style="width: 630px;height: 300px;">
+                    <h1>Validebağ Model United Nations</h1>
+                    <h2>First Time's the Charm!</h2>
+                </div>
+                <article>
+                    <h3>We are happy to bring you Validebağ MUN'23</h3>
+                 </article>
+                <form action="#" method="post">
+                    <fieldset>
+                        <legend>Search</legend>
+                        <input type="text" value="Search in Site">
+                        <input type="submit" id="sf_submit" value="Search">
+                    </fieldset>
+                </form>
+                <nav>
+                    <ul>
+                        
+                    </ul>
+                </nav>
+            </header>
+        </div>
+        <div id="intro">
+            <section>
+                <article>
+                    <h2>About Our Conference</h2>
+                    <p>Click to be directed</p>
+                </article>
+                <article>
+                    <figure>
+                        <ul>
+                            <li><a href="#">Our Team</a></li>
+                            <li><a href="#">Venue</a></li>
+                            <li><a href="c.html ">Committees</a></li>
+                            <li><a href="#">Apply Now!</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </figure>
+                </article>
+            </section>
+        </div>
     </body>
 </html>
