--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <div>
             <header>
                 <div id="hgroup">
-                    <img src="http://validebagfenlisesi.meb.k12.tr/meb_iys_dosyalar/34/22/765375/resimler/2019_12/03121756_vflmun_logo_g.jpg" alt="Validebağ Model United Nations" style="width: 630px;height: 300px;">
-                    <h1>Validebağ Model United Nations</h1>
-                    <h2>First Time's the Charm!</h2>
+                    <center><img src="http://validebagfenlisesi.meb.k12.tr/meb_iys_dosyalar/34/22/765375/resimler/2019_12/03121756_vflmun_logo_g.jpg" alt="Validebağ Model United Nations" style="width: 630px;height: 300px;">
+                    <h1 style="background-color:dodgerblue; font-size: xx-large;">Validebağ Model United Nations</h1>
+                    <h2>First Time's the Charm!</h2></center>
                 </div>
                 <article>
                     <h3>We are happy to bring you Validebağ MUN'23</h3>
