--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </header>
         </div>
         <div id="intro">
-            <center><section>
+            <section>
                 <article>
                     <h2>About Our Conference</h2>
                     <p>Click to be directed</p>
@@ -44,7 +44,7 @@
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </figure>
-                </article></center>
+                </article>
             </section>
         </div>
     </body>
