--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <ul>
                             <li><a href="#">Our Team</a></li>
                             <li><a href="#">Venue</a></li>
-                            <li><a href="c.html ">Committees</a></li>
+                            <li><a href="mun/c.html ">Committees</a></li>
                             <li><a href="#">Apply Now!</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
